@@ -1,5 +1,5 @@
 
-**SO4GP** stands for: "Some Optimizations for Gradual Patterns". SO4GP applies optimizations such as swarm intelligence, HDF5 chunks, SVD and many others in order to improve the efficiency of extracting gradual patterns. It provides Python algorithm implementations for these optimization techniques. The algorithm implementations include:
+**SO4GP** stands for: "Some Optimizations for Gradual Patterns". SO4GP applies optimizations such as swarm intelligence, HDF5 chunks, cluster analysis and many others in order to improve the efficiency of extracting gradual patterns. It provides Python algorithm implementations for these optimization techniques. The algorithm implementations include:
 
 * (Classical) GRAANK algorithm for extracting GPs
 * Ant Colony Optimization algorithm for extracting GPs
@@ -7,12 +7,15 @@
 * Particle Swarm Optimization algorithm for extracting GPs
 * Random Search algorithm for extracting GPs
 * Local Search algorithm for extracting GPs
+* Clustering-based algorithm for extracting GPs
+
+A GP (Gradual Pattern) is a set of gradual items (GI) and its quality is measured by its computed support value. For example given a data set with 3 columns (age, salary, cars) and 10 objects. A GP may take the form: {age+, salary-} with a support of 0.8. This implies that 8 out of 10 objects have the values of column age 'increasing' and column 'salary' decreasing.
 
 ## Install Requirements
 Before running **so4gp**, make sure you install the following ```Python Packages```:
 
 ```shell
-pip3 install numpy~=1.21.2 pandas~=1.3.3 python-dateutil~=2.8.2 ypstruct~=0.0.2
+pip3 install numpy>=1.23.2 pandas>=1.4.4 python-dateutil>=2.8.2 ypstruct>=0.0.2 scikit-learn>=1.1.2
 ```
 
 ## Usage
@@ -48,6 +51,7 @@ where you specify the parameters as follows:
 
 
 ### 2. Ant Colony Optimization for GPs (ACO-GRAD)
+In this approach, it is assumed that every column can be converted into gradual item (GI). If the GI is valid (i.e. its computed support is greater than the minimum support threshold) then it is either increasing or decreasing (+ or -), otherwise it is irrelevant (x). Therefore, a pheromone matrix is built using the number of columns and the possible variations (increasing, decreasing, irrelevant) or (+, -, x). The algorithm starts by randomly generating GP candidates using the pheromone matrix, each candidate is validated by confirming that its computed support is greater or equal to the minimum support threshold. The valid GPs are used to update the pheromone levels and better candidates are generated.
 
 ```python
 
@@ -65,6 +69,7 @@ where you specify the parameters as follows:
 
 
 ### 3. Genetic Algorithm for GPs (GA-GRAD)
+In this approach, it is assumed that every GP candidate may be represented as a binary gene (or individual) that has a unique position and cost. The cost is derived from the computed support of that candidate, the higher the support value the lower the cost. The aim of the algorithm is search through a population of individuals (or candidates) and find those with the lowest cost as efficiently as possible.
 
 ```python
 
@@ -85,6 +90,7 @@ where you specify the parameters as follows:
 * **return_gps** - *[optional]* additionally return object GPs ```default = False```
 
 ### 4. Particle Swarm Optimization for GPs (PSO-GRAD)
+In this approach, it is assumed that every GP candidate may be represented as a particle that has a unique position and fitness. The fitness is derived from the computed support of that candidate, the higher the support value the higher the fitness. The aim of the algorithm is search through a population of particles (or candidates) and find those with the highest fitness as efficiently as possible.
 
 ```python
 
@@ -104,6 +110,7 @@ where you specify the parameters as follows:
 * **return_gps** - *[optional]* additionally return object GPs ```default = False```
 
 ### 5. Local Search for GPs (LS-GRAD)
+In this approach, it is assumed that every GP candidate may be represented as a position that has a cost value associated with it. The cost is derived from the computed support of that candidate, the higher the support value the lower the cost. The aim of the algorithm is search through group of positions and find those with the lowest cost as efficiently as possible.
 
 ```python
 
@@ -121,6 +128,7 @@ where you specify the parameters as follows:
 
 
 ### 6. Random Search for GPs (RS-GRAD)
+In this approach, it is assumed that every GP candidate may be represented as a position that has a cost value associated with it. The cost is derived from the computed support of that candidate, the higher the support value the lower the cost. The aim of the algorithm is search through group of positions and find those with the lowest cost as efficiently as possible.
 
 ```python
 import so4gp as sgp
@@ -134,6 +142,27 @@ where you specify the parameters as follows:
 * **data_src** - *[required]* data source {either a ```file in csv format``` or a ```Pandas DataFrame```}
 * **min_sup** - *[optional]* minimum support ```default = 0.5```
 * **max_iterations** - *[optional]* maximum iterations ```default = 1```
+* **return_gps** - *[optional]* additionally return object GPs ```default = False```
+
+
+### 7. Clustering algorithm for GPs (Clu-GRAD)
+We borrow the net-win concept used in the work 'Clustering Using Pairwise Comparisons' proposed by R. Srikant to the problem of extracting gradual patterns (GPs). In order to mine for GPs, each feature yields 2 gradual items which we use to construct a bitmap matrix comparing each row to each other (i.e., (r1,r2), (r1,r3), (r1,r4), (r2,r3), (r2,r4), (r3,r4)).
+
+In this approach, we convert the bitmap matrices into 'net-win vectors'. Finally, we apply spectral clustering to determine which gradual items belong to the same group based on the similarity of net-win vectors. Gradual items in the same cluster should have almost similar score vector.
+
+```python
+import so4gp as sgp
+
+gp_json = sgp.clugps(data_src, min_sup)
+print(gp_json)
+```
+
+where you specify the parameters as follows:
+
+* **data_src** - *[required]* data source {either a ```file in csv format``` or a ```Pandas DataFrame```}
+* **min_sup** - *[optional]* minimum support ```default = 0.5```
+* **e_probability** - *[optional]* erasure probability ```default = 0.5```
+* **max_iteration** - *[optional]* maximum iterations for estimating score vectors ```default = 10```
 * **return_gps** - *[optional]* additionally return object GPs ```default = False```
 
 
