@@ -22,8 +22,8 @@ copyright = '2022, Dickson Owuor'
 author = 'Dickson Owuor'
 
 # The full version, including alpha/beta/rc tags
-release = '0.1'
-version = '0.1.0'
+release = '0.2'
+version = '0.2.5'
 
 
 # -- General configuration ---------------------------------------------------
