@@ -7,7 +7,7 @@ Welcome to so4gp's documentation!
 =================================
 
 
-**SO4GP** stands for: "Some Optimizations for Gradual Patterns". SO4GP applies optimizations such as swarm intelligence, HDF5 chunks, SVD and many others in order to improve the efficiency of extracting gradual patterns. It provides Python algorithm implementations for these optimization techniques. The algorithm implementations include:
+**SO4GP** stands for: "Some Optimizations for Gradual Patterns". SO4GP applies optimizations such as swarm intelligence, HDF5 chunks, cluster analysis and many others in order to improve the efficiency of extracting gradual patterns. It provides Python algorithm implementations for these optimization techniques. The algorithm implementations include:
 
 * (Classical) GRAANK algorithm for extracting GPs
 * Ant Colony Optimization algorithm for extracting GPs
@@ -15,6 +15,9 @@ Welcome to so4gp's documentation!
 * Particle Swarm Optimization algorithm for extracting GPs
 * Random Search algorithm for extracting GPs
 * Local Search algorithm for extracting GPs
+* Clustering-based algorithm for extracting GPs
+
+A GP (Gradual Pattern) is a set of gradual items (GI) and its quality is measured by its computed support value. For example given a data set with 3 columns (age, salary, cars) and 10 objects. A GP may take the form: {age+, salary-} with a support of 0.8. This implies that 8 out of 10 objects have the values of column age 'increasing' and column 'salary' decreasing.
 
 .. toctree::
    :maxdepth: 2
