@@ -7,4 +7,4 @@ Before running **so4gp**, make sure you install the following :code:`Python Pack
 
 .. code-block:: bash
 
-    pip3 install numpy~=1.21.2 pandas~=1.3.3 python-dateutil~=2.8.2 ypstruct~=0.0.2
+    pip3 install numpy>=1.23.2 pandas>=1.4.4 python-dateutil>=2.8.2 ypstruct>=0.0.2 scikit-learn>=1.1.2
