@@ -1,7 +1,5 @@
-numpy~=1.21.2
-pandas~=1.3.3
-python-dateutil~=2.8.2
-ypstruct~=0.0.2
-matplotlib~=3.5.1
-scikit-learn~=1.0.2
-so4gp~=0.2.2
+numpy>=1.23.2
+pandas>=1.4.4
+python-dateutil>=2.8.2
+ypstruct>=0.0.2
+scikit-learn>=1.1.2
