@@ -7,6 +7,8 @@ RELEASE NOTES
 Updates
 - added clugps funtion
 - added class DataGP4clu
+- updated README
+- added compare_gps function
 
 
 0.2.4
